Fix z-index of header errors in non-main windows.

--- a/kanmail/client/styles/header.less
+++ b/kanmail/client/styles/header.less
@@ -106,6 +106,7 @@ header {
         top: 0;
         left: 0;
         right: 0;
+        z-index: 99999;
 
         div.header-errors {
             margin-top: 20px;
